[package]
name = "aptosbb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aptosbb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }
bcs = "0.1.3"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
url = "2.3"

aptos-language-e2e-tests = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", default-features = false }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", default-features = false }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", default-features = false }
aptos-runtimes = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", default-features = false }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", default-features = false }
aptos-cached-packages = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", default-features = false }

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }